# wealth-suite

./: .gitignore  Wealth_Data_Collection.xlsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: wealth.py
backend/app/core/: db.py  security.py
backend/app/models/: __init__.py  credit_card.py  expense.py  goal.py  insurance.py  investment.py  net_worth.py  profile.py  salary.py
backend/app/schemas/: wealth.py
frontend/src/app/: Landing.module.css  globals.css  page.tsx
frontend/src/app/(dashboard)/overview/: Overview.module.css  page.tsx
frontend/src/app/(dashboard)/setup/: SetupWizard.module.css  page.tsx
frontend/src/components/theme-toggle/: ThemeToggle.module.css  ThemeToggle.tsx
frontend/src/lib/: api.ts
